# pcpaneld

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  install.sh  justfile
.github/workflows/: ci.yml  release.yml
crates/pcpaneld/: Cargo.toml
crates/pcpaneld-core/: Cargo.toml
crates/pcpaneld-core/src/: audio.rs  config.rs  control.rs  hid.rs  ipc.rs  lib.rs
crates/pcpaneld/src/: config_watcher.rs  daemon.rs  engine.rs  hid.rs  hid_thread.rs  ipc_server.rs  kwin.rs  main.rs  mpris.rs  pulse.rs  signal.rs  tray.rs
crates/pcpaneld/src/cli/: apps.rs  assign.rs  config.rs  devices.rs  info.rs  mod.rs
docs/: architecture.md  configuration.md
tests/: test-install.sh
