[package]
name = "pcpaneld"
description = "Daemon and CLI for PCPanel Pro USB audio mixer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "pcpaneld"
path = "src/main.rs"

[dependencies]
pcpaneld-core = { path = "../pcpaneld-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hidapi = { version = "2", default-features = false, features = ["linux-native"] }
ksni = "0.3"
libc = "0.2"
libpulse-binding = "2"
notify = "8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
udev = "0.9"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
